Bug 478432 - Panel in dodge mode covers the "Edit mode popup" when placed at top
Summary: Panel in dodge mode covers the "Edit mode popup" when placed at top
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.90.0
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-12 12:35 UTC by Jan Rathmann
Modified: 2023-12-21 15:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen recording of the steps to reproduce (1.26 MB, video/webm)
2023-12-12 12:35 UTC, Jan Rathmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Rathmann 2023-12-12 12:35:18 UTC
Created attachment 164108 [details]
Screen recording of the steps to reproduce

SUMMARY
If the panel is in dodge mode and placed at the top of the screen, it covers the  "Edit mode popup" when in edit mode.
(see attached screen recording)

STEPS TO REPRODUCE
1. Right click on default panel, "Enter edit mode.."
2. Set panel visibility to dodge mode
3. Set panel position to top

OBSERVED RESULT
The "Edit mode popup" is now almost fully covered by the panel and cannot be accessed anymore. (To leave edit mode, you can right click on desktop, "Leave edit mode".)

EXPECTED RESULT
The "Edit mode popup" is still visible and can be accessed to e.g. leave the edit mode.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.90
KDE Frameworks Version: 5.247 
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Independent of Wayland/X11.
Reproduced on up-to-date Neon Unstable installation and in a VM with openSuse Krypton live image.
Comment 1 Nate Graham 2023-12-12 20:35:09 UTC
Whoops! Can reproduce. Will probably be fixed accidentally by https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1902, but that may not be the best fix. I'll test.
Comment 2 Nate Graham 2023-12-12 20:56:00 UTC
Actually no, https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1902 doesn't fix it.
Comment 3 Bug Janitor Service 2023-12-15 09:16:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3683
Comment 4 Nate Graham 2023-12-21 15:50:37 UTC
Git commit 148d99d7edc8a510157e82d62d98eb58391ea222 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 21/12/2023 at 16:35.
Pushed by ngraham into branch 'master'.

Always set exclusive zone for panel when configuring it to make sure ruler does not overlap it

This should also fix the toolbox overlapping panels issue.

M  +8    -0    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/148d99d7edc8a510157e82d62d98eb58391ea222
Comment 5 Nate Graham 2023-12-21 15:50:45 UTC
Git commit feb38c722c6d9b520480189b66a718a70940fbed by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 21/12/2023 at 16:35.
Pushed by ngraham into branch 'master'.

Make availableScreenRegion consistent with availableScreenRect in only not considering autohide panels

This is due to the fact that "Windows Go Below" and "Dodge Window" do not always hide
when the desktop is shown, and we wouldn't want them to cover desktop icons or the
toolbox.

M  +2    -1    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/feb38c722c6d9b520480189b66a718a70940fbed