Always set exclusive zone for panel when configuring it to make sure ruler does not overlap it

This should also fix the toolbox overlapping panels issue.

BUG:478432